# Scalable-Mobile-Robot-System-for-Real-time-Fire-Safety-Evaluation

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/map_score_detector/: map_score_server.py
devel/lib/pkgconfig/: autonomous_tb.pc  change_map.pc  map_score_detector.pc  statemachine.pc
devel/share/autonomous_tb/cmake/: autonomous_tbConfig.cmake
devel/share/change_map/cmake/: change_mapConfig.cmake
devel/share/map_score_detector/cmake/: map_score_detectorConfig.cmake
devel/share/statemachine/cmake/: statemachineConfig.cmake
src/autonomous_tb/launch/: navigation.launch  robot_drive.launch  slam.launch
src/autonomous_tb/scripts/: goal_sequence.py
src/autonomous_tb/world/: house.world
src/autonomous_tb/world/house/: model.sdf
src/autonomous_tb/world/house_2/: model.config  model.sdf
src/change_map/: CMakeLists.txt  package.xml
src/change_map/scripts/: Untitled.ipynb  detect_changes.py
src/map_score_detector/: CMakeLists.txt
src/map_score_detector/scripts/: map_score_server.py
src/statemachine/: CMakeLists.txt  package.xml
src/statemachine/launch/: explore.launch
src/statemachine/maps/: map.pgm
src/statemachine/robot_map/: ground_truth_costmap.pgm  obs_costmap.pgm
src/statemachine/scripts/: RRT.py  detect_changes.py  explore.py  goal_sequence.py  map_score_server.py  schedular.py  scheduler.py  score.py
src/statemachine/srv/: calculateChange.srv
src/statemachine/world/: house_2.world  house_obs.world
src/statemachine/world/house/: model.config
